2011-12-21  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (input-ready-p): Don't use
	sb-impl::fd-stream-fd-type if it's not present.

2011-12-12  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-compile-region): Run slime-flash-region
	directly, not from `slime-before-compile-functions', which is run
	also for C-c C-k.

2011-12-10  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (auto-flush-loop): Don't use call-with-io-timeout.
	Removing it had no effect on the number of failed tests.  If you
	want it back, first create a test case to demonstrate the problem.
	* swank-backend.lisp: Mention that locks should only be used in
	swank-gray.lisp.

2011-12-10  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp: Move io-redirection to contrib/swank-repl.lisp.

2011-12-10  Helmut Eller  <heller@common-lisp.net>

	Make *active-threads* a slot of the connection struct.

	* swank.lisp (*active-threads*): Deleted
	([struct] multithreaded-connection): New slot active-threads.
	(find-worker-thread, interrupt-worker-thread)
	(thread-for-evaluation): Update accordingly.
	(add-active-thread, remove-active-thread): New helpers.

2011-12-10  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp (delete-stale-contrib-fasl-files): New.
	(compile-contribs): Use it.

2011-12-09  Helmut Eller  <heller@common-lisp.net>

	Create an extra thread for the indentation cache.

	* swank.lisp (indentation-cache-loop): New.
	([struct] multithreaded-connection): New slot
	indentation-cache-thread.
	(control-thread, cleanup-connection-threads): Create/kill it.
	(send-to-indentation-cache): New function.
	(update-indentation-information, sync-indentation-to-emacs): Use
	it.
	(perform-indentation-update, update-indentation/delta-for-emacs):
	Add package as argument; that used to be *buffer-package.  Can
	again be simpler as the indentation-cache-thread doesn't share the
	cache with others.
	(handle-indentation-cache-request, symbol-packages): New helpers.
